...
    
    var body: some View {
        HStack {
            Image(systemName: "magnifyingglass")
            TextField(NSLocalizedString("tSearch", comment: ""), text :$searchText)
                .frame(height:50)
                .accessibility(identifier: "SearchField")
            Button(action: {
                searchText = ""
            }) {
                Image(systemName: "xmark.circle.fill")
                    .opacity(searchText == "" ? 0: 1)
            }
...
