...
  Foodie

  Created by Алина on 27.05.24.
  
*/

"tErr" = "Error";

"tFail" = "Failure";

"tSuccess" = "Success";

"alertEmpty" = "Your input was empty";

"alert1" = "There is a mistake in your input. \nCheck if all fields are filled and if passwords are the same";

"tok" = "OK";

"tConfExit" = "Confirm your exit";

"alert2" = "Are you sure you want to quit?\nYour cart will be cleared.";

"alert3" = "There is a mistake in your input. \nCheck if all fields are filled and if your input is correct";
...
