...
                    ZStack {
                        RoundedRectangle(cornerRadius: 50)
                            .foregroundColor(.green)
                        Text("bRegister")
                            .foregroundColor(.white)
                            .bold()
                            .accessibility(identifier: "RegisterButton")
                    }
                    
                }
                .frame(width: 200, height: 35)
                .fullScreenCover(isPresented: $showRegisterScreen) {
                    Registration(isLogged: $isLogged)
...
