...
                    .font(.headline)
                    .foregroundColor(Color.blue)
                TextField("tLogin", text: $login)
                    .padding()
                    .cornerRadius(10)
                    .border(Color.blue, width: 1)
                    .accessibility(identifier: "LoginField")
            }

            VStack(alignment: .leading, spacing: 5) {
                Text("tEPassword")
                    .font(.headline)
                    .foregroundColor(Color.blue)
                SecureTextField(text: $password)
                    .padding()
                    .cornerRadius(10)
                    .border(Color.blue, width: 1)
                    .accessibility(identifier: "PasswordField")
            }
            
            VStack() {
                Spacer()
                Button(action: {
                    if (!login.isEmpty && !password.isEmpty &&
...
                    ZStack {
                        RoundedRectangle(cornerRadius: 50)
                            .foregroundColor(.green)
                        Text("lConfirm")
                            .foregroundColor(.white)
                            .bold()
                            .accessibility(identifier: "ConfirmButton")
                    }
                }
                .frame(width: 200, height: 40)
            }
        }
        .padding()
...
